bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__chat_small_idle_h3.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
