bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved codex to run echo hello world this time
