bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__experimental_features_popup.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] Ghost snapshots  Capture undo snapshots each turn.
  [x] Shell tool       Allow the model to run shell commands.

  Press space to select or enter to save for next conversation
