bin/xserver/src/chatwidget/snapshots/chaos_xserver__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  └ List ls -la
    Read foo.txt
